# inf584-renderer

./: CMakeLists.txt  README.md
report/: main.org
scenes/: scene0.toml  scene1.toml
src/: AABB.cpp  AABB.hpp  BRDF.hpp  BVH.cpp  BVH.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Emission.cpp  Image.cpp  Image.hpp  Intersect.hpp  Lambert.cpp  Light.cpp  Light.hpp  LightPath.cpp  LightPath.hpp  LightPathExpression.cpp  LightPathExpression.hpp  LightTree.cpp  LightTree.hpp  Material.hpp  Matrix.hpp  Matrix.ipp  Microfacet.cpp  MultichannelImage.hpp  Ray.hpp  Sampling.cpp  Sampling.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  TOMLParser.cpp  TOMLParser.hpp  Transform.cpp  Transform.hpp  (+13 more)
src/stylit/: DynaVec.hpp  DynaVec.ipp  EigenArray2D.hpp  EigenBuffer2DView.cpp  EigenBuffer2DView.hpp  FeatureVector.cpp  FeatureVector.hpp  MipmapPyramid.hpp  MipmapPyramid.ipp  image_analogies.cpp  image_analogies.hpp  main.cpp  stylit.cpp  stylit.hpp
